1999-01-27  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in, configure.in: Move the responsibility for
		generating the Makefile in this directory to the top-level
		configure script.  The local configure.in script has been
		deleted.

Thu Sep 24 20:05:33 1998  Tom Yu  <tlyu@mit.edu>

	* mkrel: Add fixes to deal with "tails" on release directories,
	e.g. for beta releases.

Wed Feb 18 16:31:21 1998  Tom Yu  <tlyu@mit.edu>

	* send-pr/Makefile.in: Remove trialing slash from thisconfigdir.
	Fix up BUILDTOP for new conventions.

	* Makefile.in (thisconfigdir): Remove trailing slash.

Mon Feb  2 16:16:45 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Wed Jan 28 17:26:46 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in, Makefile.in: Remove conditional AppendRule only
		for AIX, and make it happen all the time in Makefile.in

Wed Nov 19 10:52:38 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (clean-unix): Remove db lib symlinks.

Thu Nov 13 20:28:31 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* libupdate.sh: Add semicolons to prevent Bash 2.0 from
	 	complaining.  [krb5-build/486]

Wed Oct  8 16:19:49 1997  Tom Yu  <tlyu@mit.edu>

	* mkrel: Allow for edits of relevant files that should be changed
	each time a release is cut.  Some snapshot support.  Add "-9" flag
	to gzip.

Fri Feb 21 15:58:19 1997  Sam Hartman  <hartmans@mit.edu>

	* makeshlib.sh : Remove non AIX stuff; rewrite AIX stuff to work
 	with new build system.

Fri Dec  6 10:59:32 1996  Tom Yu  <tlyu@mit.edu>

	* getsyms: Don't echo filename if there are no bad symbols.

	* getsyms.sed: Fixup to handle long comments somewhat more
	gracefully.

Mon Nov 25 21:00:24 1996  Tom Yu  <tlyu@mit.edu>

	* mkrel: Add support for --srconly, --doconly, --nocheckout,
	--repository, etc.  They do the obvious things.

Fri Nov 22 11:08:16 1996  Sam Hartman  <hartmans@tertius.mit.edu>
